    using and set video type and plugin accordingly. (LP: #1100594)
  * scripts/network_check: added ability to specify custom target URL for
    debugging failures (LP: #1128017)
  * scripts/removable_storage_test: Added error handling to trap OSError on
    non-writable media and modified output to handle subsequent
    ZeroDivisionError issues when summarizing test results.

  [ Sylvain Pineau ]
  * jobs/suspend.txt.in, scripts/gpu_test: Remove the need of running the script
    with the root user, restore the workspaces switch and the HTML5 video
    playback ; remove the extra suspend/resume (LP: #1172851)

  [ Brendan Donegan ]
  * scripts/rendercheck_test - change nargs='+' to action='append' for blacklist
    option so it works as expected.
    jobs/rendercheck.txt.in - blacklist gradients test as it is known to produce
    false positives. (LP: #1093718)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 26 Apr 2013 18:23:03 +0100

checkbox (0.16) raring; urgency=low

  [ Brendan Donegan ]
  * Add hidden 'Submit to HEXR' checkbox on submission screen, so that it can
    be utilised in checkbox-certification.
  * checkbox/user_interface.py - fixed keyword argument in show_entry.
    checkbox_cli/cli_interface.py - return tuple as expected. (LP: #1173103)

  [ Po-Hsu Lin]
  * jobs/led.txt.in: Modified the description of led/power-blink-suspend test to
    cover more cases.
    jobs/suspend.txt.in: Modified the description of suspend/suspend_advanced
    test cover more cases. (LP: #1172108)

  [ Jeff Lane ]
  * scripts/sleep_test_log_check: added new script to parse fwts logs for
    errors
    jobs/hibernate.txt.in, jobs/stress.txt.in, jobs/suspend.txt.in: added jobs
    to use the sleep_test_log_check script after s3/s4 tests. Modified current
    s3/s4 tests to use the new None fail level for fwts_test
    scripts/fwts_test: no longer fails on fwts errors if "-f none" is chosen.