@@ -18,6 +18,8 @@ checkbox (0.16.1) UNRELEASED; urgency=low
   * scripts/removable_storage_test: Added error handling to trap OSError on
     non-writable media and modified output to handle subsequent
     ZeroDivisionError issues when summarizing test results.
+    jobs/media.txt.in: Modified instructions for SD/SDHC to specify using
+    UNLOCKED cards to avoid issues when testing read-only media (LP: #1153894)
 
   [ Sylvain Pineau ]
   * jobs/suspend.txt.in, scripts/gpu_test: Remove the need of running the script
